# flask-honeypot

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  combined_context.txt  docker-compose.dev.yml  docker-compose.yml  ff.md  pyproject.toml  repomix-output.xml  setup.py  setup_honeypot.sh
examples/: custom_config.py  with_existing_app.py
examples/full_deployment/: Dockerfile.frontend
flask_honeypot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
honeypot/:  docker-compose.yml  __init__.py  cli.py
honeypot/backend/: Dockerfile.backend  app.py
honeypot/backend/helpers/: proxy_detector.py  unhackable.py
honeypot/backend/middleware/: csrf_protection.py
honeypot/backend/routes/: admin.py  honeypot.py  honeypot_pages.py  honeypot_routes.py
honeypot/backend/templates/: test_session.html
honeypot/backend/templates/honeypot/: shell.html
honeypot/config/: settings.py
honeypot/database/: mongodb.py
honeypot/deploy_templates/: Dockerfile.backend.template  Dockerfile.nginx.template  docker-compose.yml.template
honeypot/deploy_templates/nginx/sites-enabled/: proxy.conf.template
honeypot/frontend/: Dockerfile.frontend  package-lock.json
honeypot/frontend/src/: App.js  index.css
honeypot/frontend/src/components/: HoneypotTab.js  HtmlInteractionsTab.js  JsonSyntaxHighlighter.js  LoadingPlaceholder.js  OverviewTab.js  csrfHelper.js
honeypot/frontend/src/static/css/: HoneypotTab.css  HtmlInteractionsTab.css  JsonSyntaxHighlighter.css  LoadingPlaceholder.css  admin.css  login.css
honeypot/frontend/src/static/js/: admin.js  login.js
honeypot/frontend/src/static/tabs/: HoneypotTab.js  HtmlInteractionsTab.js  OverviewTab.js
honeypot/frontend/src/utils/: dateUtils.js
honeypot/nginx/: nginx.conf
honeypot/nginx/sites-enabled/: proxy.conf
honeypot/utils/: db_utils.py  generate_config.py
nginx/sites-enabled/: proxy.conf
